fix ja-jp prop status pill (on /vote pgae) overflowing on mobile

--- a/packages/nouns-webapp/src/components/Proposals/Proposals.module.css
+++ b/packages/nouns-webapp/src/components/Proposals/Proposals.module.css
@@ -114,9 +114,8 @@
   }
 
   .proposalTitle {
-    width: 65%;
-    word-wrap: break-word;
-    min-width: 65%;
+    max-width: 65%;
+    overflow-wrap: break-word;
   }
 }
 
